--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,23 @@
+[tool.poetry]
+name = "k53certbot"
+version = "0.1.0+f8fe73a"
+description = ""
+authors = ["Geoff Williams <geoff@declarativesystems.com>"]
+
+[tool.poetry.dependencies]
+python = "^3.8"
+kubernetes = "^12.0.1"
+loguru = "^0.5.3"
+docopt = "^0.6.2"
+requests = "^2.25.1"
+certbot-dns-route53 = "^1.13.0"
+
+[tool.poetry.dev-dependencies]
+pytest = "^6.2.2"
+
 [build-system]
-requires = ["setuptools", "wheel"]
-build-backend = "setuptools.build_meta:__legacy__"
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+k53certbot = "k53certbot.cli:main"
